style.css
/*
Theme Name: Nunu's
Author: Garrett Roberts
Author URI: https://www.linkedin.com/in/garrett-roberts-b45640186/,
Description: Theme for Nunu's Desserts With Soul
Version: 1.0
*/

/* General Settings */
body {
  font-family: 'Raleway', sans-serif;
  padding: 0;
  margin: 0;
  background-image: url(./img/background.jpg);
  background-position: center;
  background-size: cover;
} 

h1, h2, h3, h4, h5, h6, p, a {
  color: #985927;
}


/* Navbar */
nav {
  position: fixed;
  margin: 0;
  width: 100vw;
  height: 187px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #FDEDD4;
  background-image: url(./img/background.jpg);
  background-position: center;
  background-size: cover;
  padding: 8px 16px;
  z-index: 5 !important;
  height: 100px;
  box-sizing: border-box;
}

nav a {
  text-decoration: none;
  font-size: 18px;
}

nav ul {
  display: flex;
  list-style: none;
  position: relative;
  right: 40px;
  top: 5px;
}

nav ul li {
  margin: 25px;
}

nav ul li:last-child a, nav ul li:last-child i {
  color: red;
}

#hidden-menu ul li:last-child a, #hidden-menu ul li:last-child i {
  color: red;
}

.active {
  font-weight: bold;
  padding: 0 5px;
  border-bottom: 2px solid #985927;
  transition: padding 1s;
}

#menu-icon {
  display: none;
  font-size: 30px;
  text-align: center;
}

#logo-img {
  margin-left: 50px;
  margin-top: 5px;
}

#logo-img a img {
  height: 100px;
}

/* Scrollout Menu */
#hidden-menu {
  position: fixed;
  z-index: 4;
  width: 100vw;
  display: none;
  transition: padding 2s;
  padding: 100px 0 0 0;
  background-color: #FFFCED;
}

#hidden-menu ul {
  list-style: none;
  display: flex;
  flex-direction: column;
}

#hidden-menu a {
  color: black;
  text-decoration: none;
}

#hidden-menu ul li {
  transition: padding 1s;
  border-bottom: 1px solid black;
  margin: 25px;
  width: 25%;
}

#hidden-menu ul li:hover {
  padding: 0 5px;
}

/* Header Media Queries */
@media (max-width: 1000px) {

  #menu-icon {
    display: block;
    width: 35px;
    position: relative;
    right: 50px;
  }

  nav ul {
    display: none;
  }

  #logo-img {
    margin-left: 10px;
  }

  #menu-icon {
    right: 10px;
  }
}

@media (max-width: 500px) {
  #logo-img a img {
    height: 60px;
  }
}

/* Force banner and main to render below fixed header */
#banner, main {
  position: relative;
  top: 100px;
}

/* Banner */
#banner {
  display: flex;
  text-align: center;
  width: 100%;
  justify-content: space-around;
  align-items: center;
  height: 85vh;
  background-image: url(img/sweetPotatoPie.webp);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.bannerSide {
  background-color: #FDEDD4;
  padding: 10px 15px;
  min-width: 25vw;
  min-height: 10vh;
  border: 1px solid #985927;
  box-shadow: 1px 1px 4px #5D2308;
  font-size: 1.2em;
}

.bannerLeft {
  position: relative;
  left: 120px;
}

.bannerRight {
  position: relative;
  right: 120px;
}

#banner img {
  border-radius: 100%;
  height: 65vh;
}

@media (max-width: 1900px) {
  #banner img {
    height: 50vh;
  }

  .bannerSide {
    font-size: 1em;
  }
}

@media (max-width: 550px) {
  #banner {
    flex-direction: column;
    height: 75vh;
  }

  .bannerLeft {
    left: 0px;
    top: 40px;
  }

  .bannerRight {
    right: 0px;
    bottom: 40px;
  }

  .bannerSide {
    width: 80vw;
  }

  #banner img {
    height: 30vh;
  }


}

/* Cards */
#cards-section {
  display: flex;
  width: 100%;
  justify-content: space-around;
  align-items: stretch;
  flex-wrap: wrap;
  padding: 5vh 0 10vh 0;
}

#cards-section > section {
  padding: 0 25px;
}

.card {
  height: 325px;
  width: 500px;
  background-color: #FFFCED;
  border: 1px solid #985927;
  box-sizing: border-box;
}

#featuredCard {
  background-image: url('./img/purplePie.jpg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

#featuredCaption {
  position: absolute;
  color: white;
  bottom: 0px;
  padding-left: 4px;
  margin-bottom: 4px;
}

.card p, .card h1, .card h2, .card h3, .card h4, .card h5, .card h6 {
  padding: 0 2vw;
}

@media (max-width: 600px) {
  #cards-section > section {
    width: 100vw;
    padding: 0px;
  }

  .card {
    max-width: none;
    width: 100vw;
  }
}

/* Quote */
#reviews-banner {
  background-color: #985927;
  display: flex;
  justify-content: center;
  align-items: center;
}
#reviews-banner blockquote {
  display: block;
  width: 60%;
  padding: 7vh 0;
  text-align: center;
  color: #FFFCED;
  font-size: 1.5em;
}

#reviews-banner p {
  margin: 3vh 0 0 0;
  color: #FFFCED; 
}

@media (max-width: 600px) {
  #reviews-banner blockquote {
    font-size: 1.2em;
    width: 80%;
  }
}

/* Find Us Section */
#find-us {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5vh 0 0 0;
}

#find-us > div {
  width: 95%;
  height: 450px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
}

#map {
  height: 450px;
  flex-basis: 65%;
  z-index: -1;
}

.leaflet-map {
  border: 1px solid #985927;
}

#contact {
  min-width: 200px;
}

@media (max-width: 600px) {
  #find-us > div {
    flex-direction: column;
    align-items: stretch;
    text-align: center;
    height: auto;
    margin-bottom: 50px;
  }
}

#social-links {
  margin-bottom: 100px;
  width: 100%;
  text-align: center;
  display: flex;
  justify-content: center;
}

#social-links > a {
  font-size: 1.5em;
}

.left-icon {
  margin-right: 20px;
}

.right-icon {
  margin-left: 20px;
}

/* Footer */
footer {
  background-color: #985927;
  position: fixed;
  bottom: 0px;
  width: 100vw;
}

footer h3 {
  color: #FFFCED;
  margin: 0px;
  padding: 3vh 5vw;
}

/* About page */
#about-container {
  min-height: 50vh;
  padding: 15px 40px 0 40px;
}

#about-container > h1 {
  text-align: center;
}

#about-container > div {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

#about-container > div > img {
  width: 35%;
  margin: 10px;
}

#about-text {
  width: 55%;
  display: block;
  min-width: 400px;
}

#about-text > p {
  padding: 0 5vw;
  max-width: 60vw;
  display: block;
  
}

#about-text > p:last-of-type {
  margin-bottom: 5vh;
}

#review-container {
  height: 50vh;
  background-color: #FDEDD4;
  padding-bottom: 100px;
}

#review-container > h2 {
  padding: 3vh 0;
  text-align: center;
}

@media (max-width: 1000px) {
  #about-text {
    max-width: 50%;
  }
}

@media (max-width: 800px) {
  #about-container {
    flex-direction: column;
  }

  #about-container > div > img {
    width: 80%;
  }

  #about-text {
    width: 100%;
    max-width: none;
  }

  #about-text > p {
    max-width: 100%;
    padding: 0 7vw;
  }
}

